# memstem

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  RECALL-PLAN.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
clients/codex/: AGENTS.md.example  README.md  config.toml.fragment
clients/obsidian/: .gitignore  README.md  esbuild.config.mjs  main.ts  manifest.json  package.json  styles.css  tsconfig.json
docs/: dedupe-audit.md  distillation-verification.md  frontmatter-spec.md  install.md  mcp-api.md  operations.md  recall-eval-results.md  recall-models.md  secrets.md
docs/decisions/: 0001-greenfield-not-fork.md  0002-markdown-canonical.md  0003-sqlite-with-fts5-and-vec.md  0004-mit-license.md  0005-pull-based-ingestion.md  0006-anthropic-memory-tool-adapter.md  0007-remote-ingestion.md  0008-tiered-memory.md  0009-pluggable-embedders-and-queue.md  0010-obsidian-plugin.md  0011-noise-filter-and-fact-extraction.md  0012-llm-judge-dedup.md  0013-workspace-extra-files.md  0014-cli-daemon-delegation-and-migration-discipline.md  0015-eval-harness.md  0016-mmr-diversification.md  0017-cross-encoder-rerank.md  0018-hyde-query-expansion.md  0019-no-skill-authoring.md  0020-session-distillation-writer.md  0021-project-records.md  0022-codex-adapter.md  0023-in-daemon-hygiene-loop.md  0024-incremental-startup-reconcile.md  0025-multimodal-embeddings.md  0026-source-deletion-tombstone.md  (+6 more)
eval/: queries.yaml
examples/: example_memory.md  example_skill.md
scripts/: dedupe_audit_report.py  dedupe_phase1_apply.py  dedupe_phase1_select.py  e2e-smoke.sh  install.sh  migrate-from-flipclaw.py  run_eval.py  smoke_0_7_0.sh  verify_source_deletion.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config_rerank.py  test_config_validation.py  test_daemon_reconcile.py  test_dedup.py  test_dedupe_audit_report.py  test_dedupe_phase1_apply.py  test_dedupe_phase1_select.py  test_discovery.py  test_embed_worker.py  test_embeddings.py  test_eval_harness.py  test_extraction.py  test_frontmatter.py  test_hyde.py  test_hygiene_cleanup_retro.py  test_hygiene_dedup_candidates.py  test_hygiene_dedup_judge.py  test_hygiene_distillation.py  test_hygiene_importance.py  test_hygiene_loop.py  test_hygiene_project_records.py  test_hygiene_session_distill.py  test_hygiene_state.py  test_hygiene_verify.py  test_importance_seed.py  test_index.py  test_install_sh.py  test_integration.py  test_mcp_server.py  test_media.py  test_migrate.py  test_mmr.py  test_pipeline.py  test_progress.py  test_rerank.py  test_retrieval_log.py  (+7 more)
(+64 files in other folders)
