[project]
name = "memstem"
version = "0.0.1"
description = "Unified memory and skill infrastructure for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Brad Besner", email = "bbesner@techprosecurity.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "memory", "ai-agent", "claude", "llm", "second-brain"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # MCP server
    "mcp>=1.0.0",
    # SQLite vector extension
    "sqlite-vec>=0.1.0",
    # File watching (cross-platform inotify/fsevents)
    "watchdog>=4.0.0",
    # YAML frontmatter
    "python-frontmatter>=1.0.0",
    # HTTP client (Ollama, etc.)
    "httpx>=0.27.0",
    # CLI
    "typer>=0.12.0",
    # Pydantic models
    "pydantic>=2.0.0",
    # Async file ops
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/memstem/memstem"
Issues = "https://github.com/memstem/memstem/issues"
Documentation = "https://github.com/memstem/memstem/tree/main/docs"

[project.scripts]
memstem = "memstem.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memstem"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length is handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # test method names

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["frontmatter"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=memstem --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/memstem"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
